--- a/Struts2/T1/29盛亚伟/Struts2T1001/.project
+++ b/Struts2/T1/29盛亚伟/Struts2T1001/.project
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <projectDescription>
-	<name>StrutsT101</name>
+	<name>Struts2T1001</name>
 	<comment></comment>
 	<projects>
 	</projects>
